# sovereign-35

./: Cargo.toml  README.md
hands/: hands_server.py  requirements.txt
src/: main.rs  web.rs
src/gates/: lean4.rs  mod.rs  prolog.rs
src/inject/: mod.rs  trust_deed.rs
src/models/: bedrock.rs  mod.rs  vllm.rs
src/tools/: ddg.rs  mod.rs  tavily.rs
