[package]
name        = "sovereign-35"
version     = "1.0.0"
edition     = "2021"
description = "Sovereign 3.5 — Claude Bedrock + Tavily + DDG + Lean4 gate + Prolog + vLLM. Tokio fire."
license     = "Apache-2.0"
authors     = ["Ahmad Ali Parr — SnapKitty Collective"]

[[bin]]
name = "sovereign"
path = "src/main.rs"

[dependencies]
tokio        = { version = "1",   features = ["full"] }
reqwest      = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde        = { version = "1",   features = ["derive"] }
serde_json   = "1"
aws-config   = "1"
aws-sdk-bedrockruntime = "1"
anyhow       = "1"
colored      = "2"
dotenvy      = "0.15"
sha2         = "0.10"
hex          = "0.4"
chrono       = { version = "0.4", features = ["serde"] }
